# Robo_cup

./: .gitignore  .gitmodules  README.md
NLP/: mic_speech_recognition_ros.py
examples/: goal.yaml  tiago_camera.py  tiago_moveit.py
goal/: goal.yaml
human_sensing/: readme.md
lcastor_actions/: activateOllama.py  activateRasa.py  armAction.py  debug_config.yaml  debug_config.yml  findClosestPersonToTrack.py  followPerson.py  followPerson_ats.py  gestureDetection.py  getContinueConfirmation.py  getTextInput.py  getYesNoConfirmation.py  goto.py  gotoPerson.py  gotoRoom.py  gotoRoom.py.orig  gotoRoom2.py  graspObject.py  gripperAction.py  listen.py  lookAtClosestPerson.py  moveGripperTo.py  moveTorso.py  navigateForward.py  objectDetection.py  peopleDetection.py  personIdentification.py  recog_action.py  saveGuestData.py  saveGuestDataOllama.py  setNavigationMode.py  speak.py  test.py  waitOpenDoor.py
lcastor_bringup/: CMakeLists.txt  package.xml
lcastor_conditions/: IsCarReached.py  IsDoorOpen.py  IsGestureDetected.py  IsIntentDetected.py  IsNoConfirmed.py  IsObjectDetected.py  IsOllamaIntentDetected.py  IsPersonLost.py  IsPersonTooFar.py  IsPersonTracked.py  IsTextInputReceived.py  IsYesConfirmed.py  JoyPriority.py  isDoorOpen.py  isPersonDetected.py  isPersonInRange.py  test.py
lcastor_description/: CMakeLists.txt  (+1 more)
lcastor_people_tracker/bayes_people_tracker_bringup/: CMakeLists.txt  package.xml
lcastor_people_tracker/bayes_people_tracker_bringup/config/: detectors.yaml
lcastor_people_tracker/bayes_people_tracker_bringup/launch/: people_tracker.launch
(+324 files in other folders)
