<?xml version="1.0"?>
<package>
  <name>bayes_people_tracker_bringup</name>
  <version>0.0.0</version>
  <description>human detection and tracking system.</description>
  <maintainer email="lcastri@lincoln.ac.uk">Luca Castri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
